8190711: Assert in G1MMUTracker due to concurrent modification

Reviewed-by: tschatzl, rehn, sangheki